--- a/PSets/PSet1/pset1.tex
+++ b/PSets/PSet1/pset1.tex
@@ -51,6 +51,7 @@
         \end{proof}
         \newpage
         \item ${\color{white}hi}$
+        \vspace{-1em}
         \begin{center}
             % \begin{tikzpicture}
             %     \begin{scope}
@@ -72,20 +73,21 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Fe^2+} (both ligands are X-type).
+                \item \ce{Fe^2+} (both ligands are \ce{L2X}-type).
                 \item \ce{Fe^2+} is $d^6$.
                 \item Both ligands are 5-electron donors. Thus, the ligands donate $2\cdot 5=10$ electrons in total. This combined with the above results yields $10+8=18$ as the electron count.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
+        \vspace{-1em}
         \begin{center}
             \includegraphics[width=0.2\linewidth]{../ExtFiles/pset1-1-05.png}
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Zr^4+} (all ligands are X-type).
+                \item \ce{Zr^4+} (both pentamethylcyclopentadienyl (\ce{Cp^*}) groups are \ce{L2X}-type; both hydrides are X-type).
                 \item \ce{Zr^4+} is $d^0$.
-                \item Both pentamethylcyclopentadienyl (\ce{Cp^*}) groups are 5-electron donors, and both hydrogens are 1-electron donors. Thus, the ligands donate $2\cdot 5+2\cdot 1=12$ electrons in total. This combined with the above results yields $12+4=16$ as the electron count.
+                \item Both \ce{Cp^*} groups are 5-electron donors, and both hydrogens are 1-electron donors. Thus, the ligands donate $2\cdot 5+2\cdot 1=12$ electrons in total. This combined with the above results yields $12+4=16$ as the electron count.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
@@ -94,9 +96,9 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item Both metals are \ce{Rh^+} (both cycloocta-1,5-dienyl (COD) groups are \ce{L2}-type; both bridging chlorines are LX-type [they can be thought of as bonding covalently to one rhodium and datively to the other, so when the bonds are cleaved, each chlorine steals one covalent electron from a rhodium and reclaims its two dative electrons]).
+                \item Both metals are \ce{Rh^+} (both cycloocta-1,5-dienyl (COD) groups are \ce{L2}-type; both bridging chlorines ($\mu$-Cl) are LX-type [they can be thought of as bonding covalently to one rhodium and datively to the other, so when the bonds are cleaved, each chlorine steals one covalent electron from a rhodium and reclaims its two dative electrons]).
                 \item \ce{Rh^+} is $d^8$.
-                \item Both COD groups are 4-electron donors, and both bridging chlorines are 3-electron donors. Thus, the ligands donate $2\cdot 4+2\cdot 3=14$ electrons in total. This combined with the above results yields $\frac{14+2\cdot 9}{2}=16$ as the electron count at each rhodium. It follows that there should be $\frac{36-2\cdot 16}{2}=2$ \ce{Rh-Rh} bonds.
+                \item Both COD groups are 4-electron donors, and both $\mu$-Cl ligands are 3-electron donors. Thus, the ligands donate $2\cdot 4+2\cdot 3=14$ electrons in total. This combined with the above results yields $\frac{14+2\cdot 9}{2}=16$ as the electron count at each rhodium. Since this is a $16\,\e[-]$ square planar complex, there will be no \ce{Rh-Rh} bonds even though the rhodiums have the electrons to form them.
             \end{enumerate}
         \end{proof}
         \newpage
@@ -106,7 +108,7 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Rh^3+} (the carbonyl is L-type; each iodide is X-type; the other ligand is X-type; the charge is $1-$).
+                \item \ce{Rh^3+} (the carbonyl is L-type; each iodide is X-type; the acyl is X-type; the charge is $1-$).
                 \item \ce{Rh^3+} is $d^6$.
                 \item The carbonyl is a 2-electron donor, each iodide is a 1-electron donor, and the other ligand is a 1-electron donor. Thus, the ligands donate $1\cdot 2+3\cdot 1+1\cdot 1=6$ electrons in total. This combined with the above results yields $6+9-(-1)=16$ as the electron count.
             \end{enumerate}
@@ -117,7 +119,7 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Zr^4+} (the methyl is X-type; the other ligand is \ce{X2}-type; the charge is $1+$).
+                \item \ce{Zr^4+} (the methyl is X-type; the other ligand is \ce{L4X2}-type; the charge is $1+$).
                 \item \ce{Zr^4+} is $d^0$.
                 \item The methyl is a 1-electron donor, and the other ligand is a 10-electron donor. Thus, the ligands donate $1\cdot 1+1\cdot 10=11$ electrons in total. This combined with the above results yields $11+4-1=14$ as the electron count.
             \end{enumerate}
@@ -128,55 +130,59 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{W^0} (each carbonyl is L-type; both phosphines are L-type; the other ligand is L-type).
+                \item \ce{W^0} (every ligand is L-type).
                 \item \ce{W^0} is $d^6$.
-                \item Each carbonyl is a 2-electron donor, both phosphines are 2-electron donors, and the other ligand is a 2-electron donor. Thus, the ligands donate $3\cdot 2+2\cdot 2+1\cdot 2=12$ electrons in total. This combined with the above results yields $12+6=18$ as the electron count.
+                \item Each carbonyl is a 2-electron donor, both phosphines are 2-electron donors, and the \ce{H2} adduct is a 2-electron donor. Thus, the ligands donate $3\cdot 2+2\cdot 2+1\cdot 2=12$ electrons in total. This combined with the above results yields $12+6=18$ as the electron count.
             \end{enumerate}
         \end{proof}
         \newpage
         \item ${\color{white}hi}$
+        \vspace{-1em}
         \begin{center}
             \includegraphics[width=0.32\linewidth]{../ExtFiles/pset1-1-10.png}
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Y^3+} (each Cp is X-type; each bridging methyl is LX-type).
+                \item \ce{Y^3+} (each cyclopentadienyl (Cp) group is \ce{L2X}-type; both bridging methyl ($\mu$-Me) groups are LX-type).
                 \item \ce{Y^3+} is $d^0$.
-                \item Each Cp is a 5-electron donor, and each methyl is a 3-electron donor. Thus, the ligands donate $4\cdot 5+2\cdot 3=26$ electrons in total. This combined with the above results yields $\frac{26+2\cdot 3}{2}=16$ as the electron count at each yttrium. It follows that there should be $\frac{36-2\cdot 16}{2}=2$ \ce{Y-Y} bonds.
+                \item Each Cp is a 5-electron donor, and both $\mu$-Me groups are 3-electron donors. Thus, the ligands donate $4\cdot 5+2\cdot 3=26$ electrons in total. This combined with the above results yields $\frac{26+2\cdot 3}{2}=16$ as the electron count at each yttrium. Since neither yttrium has extra $d$ electrons, there will be no \ce{Y-Y} bonds.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
+        \vspace{-1em}
         \begin{center}
             \includegraphics[width=0.18\linewidth]{../ExtFiles/pset1-1-11.png}
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Fe^0} (both carbonyls are L-type; the other ligand is X-type; the charge is $1-$).
+                \item \ce{Fe^0} (both carbonyls are L-type; the methylcyclopentadienyl (CpMe) group is \ce{L2X}-type; the charge is $1-$).
                 \item \ce{Fe^0} is $d^8$.
-                \item Both carbonyls are 2-electron donors, and the methylcyclopentadienyl group is a 5-electron donor. Thus, the ligands donate $2\cdot 2+1\cdot 5=9$ electrons in total. This combined with the above results yields $9+8-(-1)=18$ as the electron count.
+                \item Both carbonyls are 2-electron donors, and the CpMe is a 5-electron donor. Thus, the ligands donate $2\cdot 2+1\cdot 5=9$ electrons in total. This combined with the above results yields $9+8-(-1)=18$ as the electron count.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
+        \vspace{-1em}
         \begin{center}
             \includegraphics[width=0.34\linewidth]{../ExtFiles/pset1-1-12.png}
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Pd^2+} (both benzenes are X-type; both phosphines are L-type; both bridging hydroxides are LX-type).
+                \item \ce{Pd^2+} (both phenyl groups are X-type; both phosphines are L-type; both bridging hydroxides ($\mu$-OH) are LX-type).
                 \item \ce{Pd^2+} is $d^8$.
-                \item Both benzenes are 1-electron donors, both phosphines are 2-electron donors, and both bridging hydroxides are 3-electron donors. Thus, the ligands donate $2\cdot 1+2\cdot 2+2\cdot 3=12$ electrons in total. This combined with the above results yields $\frac{12+2\cdot 10}{2}=16$ as the electron count at each palladium. It follows that there should be $\frac{36-2\cdot 16}{2}=2$ \ce{Pd-Pd} bonds.
+                \item Both phenyl groups are 1-electron donors, both phosphines are 2-electron donors, and both $\mu$-OH groups are 3-electron donors. Thus, the ligands donate $2\cdot 1+2\cdot 2+2\cdot 3=12$ electrons in total. This combined with the above results yields $\frac{12+2\cdot 10}{2}=16$ as the electron count at each palladium. Since this is a $16\,\e[-]$ square planar complex, there will be no \ce{Pd-Pd} bonds even though the palladiums have the electrons to form them.
             \end{enumerate}
         \end{proof}
         \newpage
         \item ${\color{white}hi}$
+        \vspace{-1em}
         \begin{center}
             \includegraphics[width=0.24\linewidth]{../ExtFiles/pset1-1-13.png}
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Re^+} (the [linear] nitrosyl group is L-type but takes on a positive charge during bond cleavage; the methyl group is X-type; the phosphine is L-type; the \ce{Cp^*} group is X-type).
+                \item \ce{Re^+} (the [linear] nitrosyl group is LX-type but takes on a positive charge during bond cleavage; the methyl group is X-type; the phosphine is L-type; the \ce{Cp^*} group is \ce{L2X}-type).
                 \item \ce{Re^+} is $d^6$.
-                \item The nitrosyl group is a 3-electron donor (assuming it bonds linearly), the methyl group is a 1-electron donor, the phosphine is a 2-electron donor, and the \ce{Cp^*} is a 5-electron donor. Thus, the ligands donate $1\cdot 3+1\cdot 1+1\cdot 2+1\cdot 5=11$ electrons in total. This combined with the above results yields $11+7=18$ as the electron count.
+                \item The nitrosyl group is a 3-electron donor (it will bond linearly to facilitate an $18\,\e[-]$ count), the methyl group is a 1-electron donor, the phosphine is a 2-electron donor, and the \ce{Cp^*} is a 5-electron donor. Thus, the ligands donate $1\cdot 3+1\cdot 1+1\cdot 2+1\cdot 5=11$ electrons in total. This combined with the above results yields $11+7=18$ as the electron count.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
@@ -185,20 +191,21 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Ta^3+} (both \ce{Cp^*} groups are L-type; each bridging bromine is LX-type).
+                \item \ce{Ta^3+} (both \ce{Cp^*} groups are \ce{L2X}-type; each bridging bromine ($\mu$-Br) is LX-type).
                 \item \ce{Ta^3+} is $d^2$.
-                \item Both \ce{Cp^*} groups are 5-electron donors, and each bridging bromine is a 3-electron donor. Thus, the ligands donate $2\cdot 5+4\cdot 3=22$ electrons in total. This combined with the above results yields $\frac{22+2\cdot 5}{2}=16$ as the electron count at each tantalum. It follows that there should be $\frac{36-2\cdot 16}{2}=2$ \ce{Ta-Ta} bonds.
+                \item Both \ce{Cp^*} groups are 5-electron donors, and both $\mu$-Br groups are 3-electron donors. Thus, the ligands donate $2\cdot 5+4\cdot 3=22$ electrons in total. This combined with the above results yields $\frac{22+2\cdot 5}{2}=16$ as the electron count at each tantalum. It follows that there should be $\frac{36-2\cdot 16}{2}=2$ \ce{Ta-Ta} bonds.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
+        \vspace{-1em}
         \begin{center}
             \includegraphics[width=0.22\linewidth]{../ExtFiles/pset1-1-15.png}
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Fe^2+} (the chloride is X-type; the other ligand is \ce{L3}-type but carries a negative formal charge).
+                \item \ce{Fe^2+} (the chloride is X-type; the tris(phosphino)borate group is \ce{L3}-type but carries a negative formal charge).
                 \item \ce{Fe^2+} is $d^6$.
-                \item The chlorine is a 1-electron donor, and the other ligand is a 5-electron donor (3 dative bonds minus a single negative formal charge on the boron). Thus, the ligands donate $1\cdot 1+1\cdot 5=6$ electrons in total. This combined with the above results yields $6+8=14$ as the electron count.
+                \item The chlorine is a 1-electron donor, and the tris(phosphino)borate group is a 5-electron donor (3 dative bonds minus a single negative formal charge on the boron). Thus, the ligands donate $1\cdot 1+1\cdot 5=6$ electrons in total. This combined with the above results yields $6+8=14$ as the electron count.
             \end{enumerate}
         \end{proof}
         \newpage
@@ -208,9 +215,9 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Pd^0} (the phosphine is L-type; the ether is L-type; the other ligand is L-type but takes on a positive charge during bond cleavage; the charge is $1+$).
-                \item \ce{Pd^0} is $d^{10}$.
-                \item The phosphine is a 2-electron donor, the ether is a 2-electron donor, and the other ligand is a 3-electron donor. Thus, the ligands donate $1\cdot 2+1\cdot 2+1\cdot 3=7$ electrons in total. This combined with the above result yields $7+10-1=16$ as the electron count.
+                \item \ce{Pd^2+} (the phosphine is L-type; the ether is L-type; the aryl is LX-type; the charge is $1+$).
+                \item \ce{Pd^2+} is $d^8$.
+                \item The phosphine is a 2-electron donor, the ether is a 2-electron donor, and the aryl is a 3-electron donor. Thus, the ligands donate $1\cdot 2+1\cdot 2+1\cdot 3=7$ electrons in total. This combined with the above result yields $7+10-1=16$ as the electron count.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
@@ -219,9 +226,9 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Ir^2+} (the methyl is X-type; the hydride is X-type; the other ligand is \ce{L3}-type).
-                \item \ce{Ir^2+} is $d^7$.
-                \item The methyl group is a 1-electron donor, the hydrogen is a 1-electron donor, and the other ligand is a 7-electron donor (3 dative bonds plus a single positive formal charge on the leftmost nitrogen in the above picture). Thus, the ligands donate $1\cdot 1+1\cdot 1+1\cdot 7=9$ electrons in total. This combined with the above result yields $9+9=18$ as the electron count.
+                \item \ce{Ir^+} (the methyl is X-type; the hydride is X-type; the other ligand (PNP) is \ce{L3}-type but carries a positive formal charge).
+                \item \ce{Ir^+} is $d^8$.
+                \item The methyl group is a 1-electron donor, the hydrogen is a 1-electron donor, and the PNP group is a 7-electron donor (3 dative bonds plus a single positive formal charge on the leftmost nitrogen in the above picture). Thus, the ligands donate $1\cdot 1+1\cdot 1+1\cdot 7=9$ electrons in total. This combined with the above result yields $9+9=18$ as the electron count.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
@@ -230,9 +237,9 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Zr^3+} (the $t$-butoxide is X-type; both Cp groups are X-type; the \ce{Zr-Ru} bond makes no contribution), and \ce{Ru^+} (both carbonyls are L-type; the Cp is X-type; the \ce{Zr-Ru} bond makes no contribution).
-                \item \ce{Zr^3+} is $d^1$, and \ce{Ru^+} is $d^7$.
-                \item For the zirconium atom, the $t$-butoxide group is a 1-electron donor, both Cp groups are 5-electron donors, and the \ce{Zr-Ru} bond is a 1-electron donor. Thus, the ligands donate $1\cdot 1+2\cdot 5+1\cdot 1=12$ electrons in total to the zirconium atom. This combined with the above results yields $12+4=16$ as the electron count for the zirconium atom. For the ruthenium atom, both carbonyls are 2-electron donors, the Cp group is a 5-electron donor, and the \ce{Zr-Ru} bond is a 1-electron donor. Thus, the ligands donate $2\cdot 2+1\cdot 5+1\cdot 1=10$ electrons in total. This combined with the above results yields $10+8=18$ as the electron count for the ruthenium atom. It follows that there should be $\frac{36-(16+18)}{2}=1$ extra \ce{Zr-Ru} bond beyond what is shown in the above picture (2 in total).
+                \item \ce{Zr^4+} (the tert-butoxide ($t$-Bu) is X-type; both Cp groups are \ce{L2X}-type; the \ce{Zr-Ru} bond takes 1 electron), and \ce{Ru^2+} (both carbonyls are L-type; the Cp is \ce{L2X}-type; the \ce{Zr-Ru} bond takes 1 electron).
+                \item \ce{Zr^4+} is $d^0$, and \ce{Ru^2+} is $d^8$ (before \ce{Zr-Ru} bonding).
+                \item For the zirconium atom, the $t$-Bu group is a 1-electron donor, both Cp groups are 5-electron donors, and the \ce{Zr-Ru} bond is a 1-electron donor. Thus, the ligands donate $1\cdot 1+2\cdot 5+1\cdot 1=12$ electrons in total to the zirconium atom. This combined with the above results yields $12+4=16$ as the electron count for the zirconium atom. For the ruthenium atom, both carbonyls are 2-electron donors, the Cp group is a 5-electron donor, and the \ce{Zr-Ru} bond is a 1-electron donor. Thus, the ligands donate $2\cdot 2+1\cdot 5+1\cdot 1=10$ electrons in total. This combined with the above results yields $10+8=18$ as the electron count for the ruthenium atom. It follows that there should be $\frac{36-(16+18)}{2}=1$ extra \ce{Zr-Ru} bond beyond what is shown in the above picture (2 in total).
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
@@ -241,9 +248,9 @@
         \end{center}
         \begin{proof}[Answer]\leavevmode
             \begin{enumerate}[label={(\roman*)}]
-                \item \ce{Pt^2+} (the bromine is X-type; the other ligand is \ce{L2X}-type).
+                \item \ce{Pt^2+} (the bromine is X-type; the other ligand (NCP) is \ce{L2X}-type).
                 \item \ce{Pt^2+} is $d^8$.
-                \item The bromine is a 1-electron donor, and the other ligand is a 5-electron donor (2 dative bonds plus 1 covalent bond). Thus, the ligands donate $1\cdot 1+1\cdot 5=6$ electrons in total. This combined with the above result yields $6+10=16$ as the electron count.
+                \item The bromine is a 1-electron donor, and the NCP group is a 5-electron donor (2 dative bonds plus 1 covalent bond). Thus, the ligands donate $1\cdot 1+1\cdot 5=6$ electrons in total. This combined with the above result yields $6+10=16$ as the electron count.
             \end{enumerate}
         \end{proof}
         \item ${\color{white}hi}$
@@ -263,7 +270,7 @@
     \begin{enumerate}[label={\alph*)}]
         \item Which complex is more basic and which is more acidic between 2 and 5 (\ce{Co} and \ce{Zr})?
         \begin{proof}[Answer]
-            5 is more acidic because it wants to gain two electrons to get to 18 to be more stable, whereas 2 already has 18 electrons, and thus is more basic relatively.
+            5 is more acidic because it wants to gain two electrons to get to 18 to be more stable (and it is $d^0$), whereas 2 already has 18 electrons, and thus is more basic relatively. Also note that \ce{Co-H} is acidic while \ce{Zr-H} is hydridic.
         \end{proof}
         \item Which complex is more likely to be reduced or oxidized between 4 and 15 (both \ce{Fe})?
         \begin{proof}[Answer]
@@ -271,7 +278,7 @@
         \end{proof}
         \item Which complex is more likely to have its \ce{M-C} bond hydrolyze between 8 and 12 (\ce{Zr} and \ce{Pd})?
         \begin{proof}[Answer]
-            8 is more likely to have its \ce{M-C} bond hydrolyze. In 12, benzene, because it is so stable, is not a great leaving group and the square planar geometry at each metal center is extra stable because of the 16 electron rule (or 18 electrons depending on \ce{Pd-Pd} bonding). However, in 8, the \ce{M-CH3} bond is highly unstable due to the electron count of 14.
+            8 is more likely to have its \ce{M-C} bond hydrolyze because its \ce{M-C} bond is more polarized.
         \end{proof}
     \end{enumerate}
     \item Consider the following complex.
@@ -281,7 +288,7 @@
     \begin{enumerate}[label={\alph*)}]
         \item Assign an oxidation state, $d$ count, overall electron count, and "L/X/Z" formalism.
         \begin{proof}[Answer]
-            The oxidation state is \ce{Fe^0} since all ligands form dative bonds.\par
+            The oxidation state is \ce{Fe^0} since all ligands form dative bonds and the negative charge balances out the borate.\par
             The $d$ count is $d^8$.\par
             With respect to the overall electron count, \ce{N2} is a 2-electron donor and the bottom ligand is a 6-electron donor. Thus, the electron count is $(2+6)+(8)-(-1)=17$.\par
             The nitrogen is L-type, and the other ligand is \ce{L3Z}-type (assuming that there is a single \ce{Fe-B} bond).
@@ -308,7 +315,13 @@
         \begin{proof}[Answer]
             Structure:
             \begin{center}
-                \chemfig{M-P(-[2,0.7]R)(-[,0.7]R)(-[6,0.7]R)}
+                \schemestart
+                    \chemfig{M-[,,,,{stealth-}]\charge{180=\:}{P}(-[2,0.7]R)(-[,0.7]R)(-[6,0.7]R)}
+                    \arrow{<->}
+                    \chemfig{M-\charge{45[xshift=1mm,yshift=1mm]=$\oplus$}{P}(-[2,0.7]R)(-[,0.7]R)(-[6,0.7]R)}
+                    \arrow{<->}
+                    \chemfig{M=P(-[2,0.7]R)(-[,0.7]R)(-[6,0.7]R)}
+                \schemestop
             \end{center}
             2-electron donor.\par
             L-type ligand.
@@ -349,16 +362,16 @@
                 \schemestop\\[1em]
                 \chemfig{M-[:30]\charge{90=\:}{N}=[:-30]\charge{0=\:,-90=\:}{O}}
             \end{center}
-            The top set of resonance structures are 3-electron-donating L-type ligands. The bottom structure is a 1-electron-donating X-type ligand.
+            The top set of resonance structures are 3-electron-donating LX-type ligands. The bottom structure is a 1-electron-donating X-type ligand.
         \end{proof}
         \item \ce{C3H5}.
         \begin{proof}[Answer]
             Resonance structures:
             \begin{center}
                 \schemestart
-                    \chemfig{M-[:105,2]\phantom{i}-[:-150,0.5,,,white]C(-[:150]H)(-[6]H)=[:30]C(-[2]H)-[:-30]C(-[:30]H)(-[6]H)}
+                    \chemfig{M?-[:105,2,,,{stealth-}]\phantom{i}-[:-150,0.5,,,white]C(-[:150]H)(-[6]H)=[:30]C(-[2]H)-[:-30]C?(-[:30]H)(-[6]H)}
                     \arrow{<->}
-                    \chemfig{M-[:75,2]\phantom{i}-[:150,0.5,,,white]\phantom{C}-[:-150,,,,white]C(-[:150]H)(-[6]H)-[:30]C(-[2]H)=[:-30]C(-[:30]H)(-[6]H)}
+                    \chemfig{M?-[:105,2,,,white]\phantom{i}-[:-150,0.5,,,white]C?(-[:150]H)(-[6]H)-[:30]C?(-[2]H)-[:-30]C?(-[:30]H)(-[6]H)}
                 \schemestop
             \end{center}
             3-electron donor.\par
@@ -464,7 +477,7 @@
         \end{proof}
         \item \ce{Mn}(II) or \ce{Mn}(III).
         \begin{proof}[Answer]
-            \ce{Mn}(II) has a larger radius than \ce{Mn}(III) because having more electrons means more intra-orbital repulsions, all of which push the bounds of the atom.
+            \ce{Mn}(II) has a larger radius than \ce{Mn}(III) because it has more antibonding electrons.
         \end{proof}
         \item Low spin \ce{Ti}(II) or high spin \ce{Ti}(II).
         \begin{proof}[Answer]
@@ -472,13 +485,14 @@
         \end{proof}
         \item \ce{Zr}(IV) or \ce{Zr}(III).
         \begin{proof}[Answer]
-            \ce{Zr}(III) has a larger radius than \ce{Zr}(IV) for the same reasons listed in part (b).
+            \ce{Zr}(III) has a larger radius than \ce{Zr}(IV) because it has populated $d$ orbitals.
         \end{proof}
     \end{enumerate}
     \item The isolobal analogy is frequently used to help relate seemingly disparate fragments. Utilize this analogy to compare the bonding in terminal nitride (\ce{N}) and alkylidyne (\ce{CR}) complexes.
     \begin{proof}[Answer]
         Since we have \chemfig[atom sep=1.2em]{M=\charge{45=\:,-45=\:}{N}}\quad and \chemfig[atom sep=1.2em]{M=\charge{90=\:}{C}-R} for how the two ligands bond, we can assume based on the fact that the two ligands are isoelectronic and isolobal (simply replace a lone pair in the nitride with the bond in the alkylidyne, or vice versa) that they have similar bonding, stability, and chemical properties.
     \end{proof}
+    \newpage
     \item Read \textcite{bib:CBC}. Based on this paper, answer the following questions.
     \begin{enumerate}[label={\alph*)}]
         \item In your own words, explain the reasons why the author considers a different form of bond classification necessary.
